[project]
name = "chef-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.1",
    "tavily>=1.1.0",
    "tavily-python>=0.7.23",
    "ultralytics",
]
